feat: Add User Authentication
