# swagger.yaml
@@ -12,17 +12,23 @@ schemes:
     - http
     - https
 securityDefinitions:
+    BearerToken:
+        type: apiKey
+        in: header
+        name: x-token
     OauthSecurity:
         type: oauth2
         flow: accessCode
-        authorizationUrl: 'https://accounts.google.com/o/oauth2/v2/auth'
-        tokenUrl: 'https://www.googleapis.com/oauth2/v4/token'
+        authorizationUrl: 'https://auth.philipple.de/auth/realms/Testing/protocol/openid-connect/auth'
+        tokenUrl: 'https://auth.philipple.de/auth/realms/Testing/protocol/openid-connect/token'
         scopes:
+            openid: OpenID Connect
             admin: Admin scope
             user: User scope
 security:
+    - BearerToken: []
     - OauthSecurity:
-          - user
+          - openid
 definitions:
     error:
         type: object
@@ -37,6 +43,10 @@ definitions:
     user:
         type: object
         properties:
+            id:
+                type: number
+                readOnly: true
+                format: int32
             name:
                 type: string
                 readOnly: true
